// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Ottrelite Babel Plugin Transform tests should handle function with complex body and destructured props with implicit tracer name 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
function MyComponent(_ref) {
  var show = _ref.show;
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent(_ref) {
    var x = 1;
    var y = 2;
    console.log(x + y);
    if (show) {
      return (0, _jsxRuntime.jsx)("div", {
        children: x + y
      });
    }
    return null;
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should handle function with complex body with implicit tracer name 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
function MyComponent(props) {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent(props) {
    var x = 1;
    var y = 2;
    console.log(x + y);
    if (props.show) {
      return (0, _jsxRuntime.jsx)("div", {
        children: x + y
      });
    }
    return null;
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent(props);
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should not transform function without use trace directive 1`] = `
"var _jsxRuntime = require("react/jsx-runtime");
function MyComponent() {
  'use strict';

  return (0, _jsxRuntime.jsx)("div", {
    children: "Hello"
  });
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should not transform when no directive is present 1`] = `
"var _jsxRuntime = require("react/jsx-runtime");
function MyComponent() {
  var x = 1;
  return (0, _jsxRuntime.jsx)("div", {
    children: x
  });
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform a complex component with implicit tracer name 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.MyComponent = MyComponent;
var _core = require("@ottrelite/core");
var _slicedToArray2 = _interopRequireDefault(require("@babel/runtime/helpers/slicedToArray"));
var _useSubheading2 = require("@hooks/useSubheading");
var _react = require("react");
var _reactNative = require("react-native");
var _reactNativePaper = require("react-native-paper");
var _jsxRuntime = require("react/jsx-runtime");
function MyComponent(_ref) {
  var heading = _ref.heading;
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent(_ref) {
    var _res$count;
    var _ref2 = _react.useState < {
        count: number
      } | null > null,
      _ref3 = (0, _slicedToArray2.default)(_ref2, 2),
      res = _ref3[0],
      setRes = _ref3[1];
    var _useSubheading = (0, _useSubheading2.useSubheading)(),
      subheading = _useSubheading.subheading;
    (0, _react.useEffect)(function () {
      fetch('http://api.test.com/data').then(function (response) {
        return response.json();
      }).then(function (data) {
        return setRes(data);
      }).catch(function (error) {
        return console.error(error);
      });
    }, []);
    return (0, _jsxRuntime.jsxs)(_reactNative.View, {
      children: [(0, _jsxRuntime.jsx)(_reactNativePaper.Text, {
        variant: "titleLarge",
        children: heading
      }), (0, _jsxRuntime.jsx)(_reactNativePaper.Text, {
        variant: "titleSmall",
        children: subheading
      }), (0, _jsxRuntime.jsx)(_reactNativePaper.Text, {
        children: (_res$count = res == null ? void 0 : res.count) != null ? _res$count : 'Loading...'
      })]
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform arrow function assigned to variable with implicit tracer name 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
var MyComponent = function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent() {
    return (0, _jsxRuntime.jsx)("div", {
      children: "Hello"
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
};"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform class component with unary custom component name 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _core = require("@ottrelite/core");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var MyClass = (0, _core.withComponentRenderTracing)("CustomTestName", "dev", function () {
  function MyClass() {
    (0, _classCallCheck2.default)(this, MyClass);
  }
  return (0, _createClass2.default)(MyClass, [{
    key: "render",
    value: function render() {
      return 'result';
    }
  }]);
}());"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform class component with unary explicit dev API 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _core = require("@ottrelite/core");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var MyClass = (0, _core.withComponentRenderTracing)("MyClass", "dev", function () {
  function MyClass() {
    (0, _classCallCheck2.default)(this, MyClass);
  }
  return (0, _createClass2.default)(MyClass, [{
    key: "render",
    value: function render() {
      return 'result';
    }
  }]);
}());"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform class component with unary explicit otel API 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _core = require("@ottrelite/core");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var MyClass = (0, _core.withComponentRenderTracing)("MyClass", "otel", function () {
  function MyClass() {
    (0, _classCallCheck2.default)(this, MyClass);
  }
  return (0, _createClass2.default)(MyClass, [{
    key: "render",
    value: function render() {
      return 'result';
    }
  }]);
}());"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform class components with two parameters: API and component name, for both APIs specified 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _core = require("@ottrelite/core");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var MyClass = (0, _core.withComponentRenderTracing)("CustomTestName1", "dev", function () {
  function MyClass() {
    (0, _classCallCheck2.default)(this, MyClass);
  }
  return (0, _createClass2.default)(MyClass, [{
    key: "render",
    value: function render() {
      return 'result';
    }
  }]);
}());
var MyClass2 = (0, _core.withComponentRenderTracing)("CustomTestName2", "otel", function () {
  function MyClass2() {
    (0, _classCallCheck2.default)(this, MyClass2);
  }
  return (0, _createClass2.default)(MyClass2, [{
    key: "render",
    value: function render() {
      return 'result';
    }
  }]);
}());"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform class methods with implicit tracer name 1`] = `
"var _interopRequireDefault = require("@babel/runtime/helpers/interopRequireDefault");
var _core = require("@ottrelite/core");
var _classCallCheck2 = _interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));
var _createClass2 = _interopRequireDefault(require("@babel/runtime/helpers/createClass"));
var MyClass = (0, _core.withComponentRenderTracing)("MyClass", "dev", function () {
  function MyClass() {
    (0, _classCallCheck2.default)(this, MyClass);
  }
  return (0, _createClass2.default)(MyClass, [{
    key: "render",
    value: function render() {
      return 'result';
    }
  }]);
}());"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function component with unary custom component name 1`] = `
"var _core = require("@ottrelite/core");
function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("CustomTestName", undefined, "dev");
  function OttreliteWrappedCustomTestName() {
    return 'result';
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedCustomTestName();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function component with unary explicit dev API 1`] = `
"var _core = require("@ottrelite/core");
function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent() {
    return 'result';
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function component with unary explicit otel API 1`] = `
"var _core = require("@ottrelite/core");
function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "otel");
  function OttreliteWrappedMyComponent() {
    return 'result';
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function components with two parameters: API and component name 1`] = `
"var _core = require("@ottrelite/core");
function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("CustomTestName", undefined, "dev");
  function OttreliteWrappedCustomTestName() {
    return 'result';
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedCustomTestName();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}
function MyComponent2() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("CustomTestName", undefined, "otel");
  function OttreliteWrappedCustomTestName() {
    return 'result';
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedCustomTestName();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function declaration with implicit tracer name 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent() {
    var x = 1;
    return (0, _jsxRuntime.jsx)("div", {
      children: x
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function expression assigned to variable with implicit tracer name 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
var MyComponent = function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("MyComponent", undefined, "dev");
  function OttreliteWrappedMyComponent() {
    return (0, _jsxRuntime.jsx)("div", {
      children: "Hello"
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedMyComponent();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
};"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform function with explicit tracer name 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
function MyComponent() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("CustomName", undefined, "dev");
  function OttreliteWrappedCustomName() {
    return (0, _jsxRuntime.jsx)("div", {
      children: "Hello"
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedCustomName();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;

exports[`Ottrelite Babel Plugin Transform tests should transform multiple functions in same file with implicit tracer names 1`] = `
"var _core = require("@ottrelite/core");
var _jsxRuntime = require("react/jsx-runtime");
function ComponentA() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("ComponentA", undefined, "dev");
  function OttreliteWrappedComponentA() {
    return (0, _jsxRuntime.jsx)("div", {
      children: "A"
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedComponentA();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}
function ComponentB() {
  var __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER = (0, _core.useComponentRenderTracing)("ComponentB", undefined, "dev");
  function OttreliteWrappedComponentB() {
    return (0, _jsxRuntime.jsx)("div", {
      children: "B"
    });
  }
  var __ottreliteCompOrigResult_UUID_PLACEHOLDER = OttreliteWrappedComponentB();
  __ottreliteUseComponentRenderTracingResult_UUID_PLACEHOLDER.markJSRenderEnd();
  return __ottreliteCompOrigResult_UUID_PLACEHOLDER;
}"
`;
